advanced todo list made
Signed-off-by: Shourya Jain <Shourya.Jain@amd.com>

--- a/todo-js/index.html
+++ b/todo-js/index.html
@@ -11,7 +11,7 @@
     <h2>This is a task list</h2>
     <input id="inptask">
     <button id="btnAdd">Add</button>
-    <ul id="listTasks"></ul>
+    <ul id="listTasks">
         <li>sample</li>
     </ul>
 </body>
